{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 68,
  "lineage": "bb795b13-b213-fe51-e6eb-8208fad14264",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f40211e732cf3d",
            "arn": "arn:aws:ec2:ap-south-1:584523978049:elastic-ip/eipalloc-0e6f40211e732cf3d",
            "association_id": "eipassoc-0bbd771821a30afb3",
            "domain": "vpc",
            "id": "eipalloc-0e6f40211e732cf3d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-02f788a2d2ab458da",
            "private_dns": "ip-10-0-1-77.ap-south-1.compute.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-13-204-34-45.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.34.45",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-nat-eip"
            },
            "tags_all": {
              "Name": "devops-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "eipalloc-0e6f40211e732cf3d",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:internet-gateway/igw-07fba70062e900e1e",
            "id": "igw-07fba70062e900e1e",
            "owner_id": "584523978049",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-assignment-igw"
            },
            "tags_all": {
              "Name": "devops-assignment-igw"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "igw-07fba70062e900e1e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f40211e732cf3d",
            "association_id": "eipassoc-0bbd771821a30afb3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-016974332ca00e932",
            "network_interface_id": "eni-02f788a2d2ab458da",
            "private_ip": "10.0.1.77",
            "public_ip": "13.204.34.45",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09a5a37b18a152cd4",
            "tags": {
              "Name": "devops-nat-az1"
            },
            "tags_all": {
              "Name": "devops-nat-az1"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "nat-016974332ca00e932",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:route-table/rtb-0f8225c099ed760ac",
            "id": "rtb-0f8225c099ed760ac",
            "owner_id": "584523978049",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-016974332ca00e932",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-private-app-route-table"
            },
            "tags_all": {
              "Name": "devops-private-app-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023223a4098804338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtb-0f8225c099ed760ac",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az1",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:route-table/rtb-05a25d55776258df2",
            "id": "rtb-05a25d55776258df2",
            "owner_id": "584523978049",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "devops-private-db-route-table"
            },
            "tags_all": {
              "Name": "devops-private-db-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023223a4098804338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtb-05a25d55776258df2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:route-table/rtb-081201ccb1955e9cb",
            "id": "rtb-081201ccb1955e9cb",
            "owner_id": "584523978049",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fba70062e900e1e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-public-route-table"
            },
            "tags_all": {
              "Name": "devops-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-023223a4098804338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtb-081201ccb1955e9cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a69cdf930b5f3f4",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f8225c099ed760ac",
            "subnet_id": "subnet-0f31d8fe2ab26c25e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-02a69cdf930b5f3f4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az1",
            "aws_route_table.private_app",
            "aws_subnet.private_app_az1",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0c9cbad97813786",
            "region": "ap-south-1",
            "route_table_id": "rtb-0f8225c099ed760ac",
            "subnet_id": "subnet-0649a82cd4ead5143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-0d0c9cbad97813786",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.az1",
            "aws_route_table.private_app",
            "aws_subnet.private_app_az2",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaae59a7b015cb97",
            "region": "ap-south-1",
            "route_table_id": "rtb-05a25d55776258df2",
            "subnet_id": "subnet-0295545eb9d6c0641"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-0aaae59a7b015cb97",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097ba76265133108a",
            "region": "ap-south-1",
            "route_table_id": "rtb-05a25d55776258df2",
            "subnet_id": "subnet-0f5fcc22e35e62c09"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-097ba76265133108a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092b6b4a13f47bf6b",
            "region": "ap-south-1",
            "route_table_id": "rtb-081201ccb1955e9cb",
            "subnet_id": "subnet-09a5a37b18a152cd4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-092b6b4a13f47bf6b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_az1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d43b152ddcea5d6",
            "region": "ap-south-1",
            "route_table_id": "rtb-081201ccb1955e9cb",
            "subnet_id": "subnet-0224630769408f5d7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "rtbassoc-03d43b152ddcea5d6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_az2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:security-group/sg-0254ad0bd0d57e4da",
            "description": "Security group for PostgreSQL RDS",
            "egress": [],
            "id": "sg-0254ad0bd0d57e4da",
            "ingress": [],
            "name": "devops-rds-sg",
            "name_prefix": "",
            "owner_id": "584523978049",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-rds-sg"
            },
            "tags_all": {
              "Name": "devops-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023223a4098804338"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "sg-0254ad0bd0d57e4da",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-0f31d8fe2ab26c25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31d8fe2ab26c25e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-private-app-az1"
            },
            "tags_all": {
              "Name": "devops-private-app-az1"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-0f31d8fe2ab26c25e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-0649a82cd4ead5143",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649a82cd4ead5143",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-private-app-az2"
            },
            "tags_all": {
              "Name": "devops-private-app-az2"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-0649a82cd4ead5143",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-0295545eb9d6c0641",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0295545eb9d6c0641",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-private-db-az1"
            },
            "tags_all": {
              "Name": "devops-private-db-az1"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-0295545eb9d6c0641",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-0f5fcc22e35e62c09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5fcc22e35e62c09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-private-db-az2"
            },
            "tags_all": {
              "Name": "devops-private-db-az2"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-0f5fcc22e35e62c09",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-09a5a37b18a152cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a5a37b18a152cd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-public-az1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-public-az1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-09a5a37b18a152cd4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:subnet/subnet-0224630769408f5d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0224630769408f5d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "584523978049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-public-az2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "devops-public-az2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-023223a4098804338"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "subnet-0224630769408f5d7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:584523978049:vpc/vpc-023223a4098804338",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ecd19e3ebb451bde",
            "default_route_table_id": "rtb-01c05928465b07e50",
            "default_security_group_id": "sg-07ea3c124438fba46",
            "dhcp_options_id": "dopt-07e37f2cc70caf4b1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023223a4098804338",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c05928465b07e50",
            "owner_id": "584523978049",
            "region": "ap-south-1",
            "tags": {
              "Name": "devops-assignment-vpc"
            },
            "tags_all": {
              "Name": "devops-assignment-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "584523978049",
            "id": "vpc-023223a4098804338",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}